Add twitter bootstrap and jquery to the master template

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,17 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <!-- Twitter Bootstrap Stylesheet -->
+        <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
+        <!-- JQuery Framework -->
+        <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
+        <!-- Twitter Bootstrap -->
+        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
