--- a/app/Resources/SensioGeneratorBundle/skeleton/bundle/index.html.twig.twig
+++ b/app/Resources/SensioGeneratorBundle/skeleton/bundle/index.html.twig.twig
@@ -3,18 +3,20 @@
 Hello
 {{- '{% endblock %}' }}
 {{ '{% block body %}' }}
-<h1>Hello {% raw %}{{ name }}{% endraw %}!</h1>
+    <div class="container">
+        <h1>Hello {% raw %}{{ name }}{% endraw %}!</h1>
 
-<!-- Sample Bootstrap Components -->
-<h4>Bootstrap Labels</h4>
-<p>
-    <span class="label label-default">Default</span>
-    <span class="label label-primary">Primary</span>
-    <span class="label label-success">Success</span>
-    <span class="label label-info">Info</span>
-    <span class="label label-warning">Warning</span>
-    <span class="label label-danger">Danger</span>
-</p>
+        <!-- Sample Bootstrap Components -->
+        <h4>Bootstrap Labels</h4>
+        <p>
+            <span class="label label-default">Default</span>
+            <span class="label label-primary">Primary</span>
+            <span class="label label-success">Success</span>
+            <span class="label label-info">Info</span>
+            <span class="label label-warning">Warning</span>
+            <span class="label label-danger">Danger</span>
+        </p>
 
-<p>Here you can insert your twitter bootstrap components</p>
+        <p>Here you can insert your twitter bootstrap components</p>
+    </div>
 {{ '{% endblock %}' }}
