Add jquery ajax form javascript

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,8 +10,10 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-        <!-- JQuery Framework -->
+        <!-- jQuery Framework -->
         <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
+        <!-- jQuery Ajax Form -->
+        <script src="{{ asset('js/jquery.form.min.js') }}"></script>
         <!-- Twitter Bootstrap -->
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
