--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,6 +16,8 @@
         <script src="{{ asset('js/jquery.form.min.js') }}"></script>
         <!-- Twitter Bootstrap -->
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <!-- Twitter Bootstrap Fileupload -->
+        <script src="{{ asset('js/bootstrap-filestyle.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
