--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,8 @@
         <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
         <!-- jQuery Ajax Form -->
         <script src="{{ asset('js/jquery.form.min.js') }}"></script>
+        <!-- jQuery Form Validate -->
+        <script src="{{ asset('js/jquery.validate.min.js') }}"></script>
         <!-- Twitter Bootstrap -->
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         <!-- Twitter Bootstrap Fileupload -->
