--- a/app/Resources/SensioGeneratorBundle/skeleton/bundle/index.html.twig.twig
+++ b/app/Resources/SensioGeneratorBundle/skeleton/bundle/index.html.twig.twig
@@ -3,20 +3,10 @@
 Hello
 {{- '{% endblock %}' }}
 {{ '{% block body %}' }}
-    <div class="container">
-        <h1>Hello {% raw %}{{ name }}{% endraw %}!</h1>
-
-        <!-- Sample Bootstrap Components -->
-        <h4>Bootstrap Labels</h4>
-        <p>
-            <span class="label label-default">Default</span>
-            <span class="label label-primary">Primary</span>
-            <span class="label label-success">Success</span>
-            <span class="label label-info">Info</span>
-            <span class="label label-warning">Warning</span>
-            <span class="label label-danger">Danger</span>
-        </p>
-
-        <p>Here you can insert your twitter bootstrap components</p>
+<div class="container">
+    <div class="page-header">
+        <h1>Welcome to the {{ controller }}:{{ action.basename }} page</h1>
     </div>
+    <p>Please place here your page content.</p>
+</div>
 {{ '{% endblock %}' }}
