--- a/app/Resources/SensioGeneratorBundle/skeleton/bundle/index.html.twig.twig
+++ b/app/Resources/SensioGeneratorBundle/skeleton/bundle/index.html.twig.twig
@@ -1,11 +1,11 @@
 {{ '{% extends "::base.html.twig" %}' }}
 {{ '{% block title %}' -}}
-Hello
+{{ '{{ bundleName }}' }} index
 {{- '{% endblock %}' }}
 {{ '{% block body %}' }}
 <div class="container">
     <div class="page-header">
-        <h1>Welcome to the {{ controller }}:{{ action.basename }} page</h1>
+        <h1>Welcome to <strong>{{ '{{ bundleName }}' }}</strong> index</h1>
     </div>
     <p>Please place here your page content.</p>
 </div>
