--- a/app/Resources/SensioGeneratorBundle/skeleton/bundle/DefaultController.php.twig
+++ b/app/Resources/SensioGeneratorBundle/skeleton/bundle/DefaultController.php.twig
@@ -17,7 +17,7 @@ class DefaultController extends Controller
 {% block class_body %}
     {% if 'annotation' == format -%}
     /**
-     * @Route("/", "home")
+     * @Route("/", name="home")
      * @Template()
      */
     {% endif -%}
