Adjust debug toolbar links

--- a/app/Resources/WebProfilerBundle/views/Profiler/toolbar.html.twig
+++ b/app/Resources/WebProfilerBundle/views/Profiler/toolbar.html.twig
@@ -45,6 +45,18 @@
             <div class="sf-toolbar-info-piece">
                 <a href="{{ path('gui') }}"><strong>Rapid Development Cockpit</strong></a>
             </div>
+            <div class="sf-toolbar-info-piece">
+                <a href="{{ path('guiCreateController') }}">Page Generator</a>
+            </div>
+            <div class="sf-toolbar-info-piece">
+                <a href="{{ path('guiCreateCrud') }}">Entity Generator</a>
+            </div>
+            <div class="sf-toolbar-info-piece">
+                <a href="{{ path('guiCreateBundle') }}">Bundle Generator</a>
+            </div>
+            <div class="sf-toolbar-info-piece">
+                <a href="{{ path('guiInstallBundle') }}">Bundle Installer</a>
+            </div>
         </div>
     </div>
 
