add tool icons at debug toolbar

--- a/app/Resources/WebProfilerBundle/views/Profiler/toolbar.html.twig
+++ b/app/Resources/WebProfilerBundle/views/Profiler/toolbar.html.twig
@@ -46,16 +46,16 @@
                 <a href="{{ path('gui') }}"><strong>Rapid Development Cockpit</strong></a>
             </div>
             <div class="sf-toolbar-info-piece">
-                <a href="{{ path('guiCreateController') }}">Page Generator</a>
+                <a href="{{ path('guiCreateController') }}"><span class="glyphicon glyphicon-file"></span> Page Generator</a>
             </div>
             <div class="sf-toolbar-info-piece">
-                <a href="{{ path('guiCreateCrud') }}">Entity Generator</a>
+                <a href="{{ path('guiCreateCrud') }}"><span class="glyphicon glyphicon-wrench"></span> Entity Generator</a>
             </div>
             <div class="sf-toolbar-info-piece">
-                <a href="{{ path('guiCreateBundle') }}">Bundle Generator</a>
+                <a href="{{ path('guiCreateBundle') }}"><span class="glyphicon glyphicon-folder-open"></span> Bundle Generator</a>
             </div>
             <div class="sf-toolbar-info-piece">
-                <a href="{{ path('guiInstallBundle') }}">Bundle Installer</a>
+                <a href="{{ path('guiInstallBundle') }}"><span class="glyphicon glyphicon-cloud-download"></span> Bundle Installer</a>
             </div>
         </div>
     </div>
