New create bundle icon

--- a/app/Resources/WebProfilerBundle/views/Profiler/toolbar.html.twig
+++ b/app/Resources/WebProfilerBundle/views/Profiler/toolbar.html.twig
@@ -52,7 +52,7 @@
                 <a href="{{ path('guiCreateCrud') }}"><span class="glyphicon glyphicon-wrench"></span> Entity Generator</a>
             </div>
             <div class="sf-toolbar-info-piece">
-                <a href="{{ path('guiCreateBundle') }}"><span class="glyphicon glyphicon-folder-open"></span> Bundle Generator</a>
+                <a href="{{ path('guiCreateBundle') }}"><span class="glyphicon glyphicon-briefcase"></span> Bundle Generator</a>
             </div>
             <div class="sf-toolbar-info-piece">
                 <a href="{{ path('guiInstallBundle') }}"><span class="glyphicon glyphicon-cloud-download"></span> Bundle Installer</a>
