--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
     <head>
-        <meta charset="UTF-8" />
         <title>{% block title %}{{ platform.name }}{% endblock %}</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="{{ platform.description }}" />
         <meta name="keywords" content="{{ platform.keywords }}" />
         <!-- Twitter Bootstrap Stylesheet -->
