--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,8 @@
         <meta name="keywords" content="{{ platform.keywords }}" />
         <!-- Twitter Bootstrap Stylesheet -->
         <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+        <!-- Font Awesome Stylesheet -->
+        <link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet" media="screen">
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
