--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,5 +26,7 @@
         <!-- Twitter Bootstrap Fileupload -->
         <script src="{{ asset('js/bootstrap-filestyle.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
+        <!-- Dropzone.js File Uploader -->
+        <script src="{{ asset('js/dropzone.min.js') }}"></script>
     </body>
 </html>
