--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}{{ platform.name }}{% endblock %}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="{{ platform.description }}" />
         <meta name="keywords" content="{{ platform.keywords }}" />
