--- a/app/config/variables.less
+++ b/app/config/variables.less
@@ -1,5 +1,5 @@
-// --------------------------------------------------
-// Variables - GUI Basic Theme
+//
+// Variables
 // --------------------------------------------------
 
 
@@ -335,9 +335,9 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height: 50px;
 @navbar-margin-bottom:             @line-height-computed;
-@navbar-border-radius:             @border-radius-base;
+@navbar-border-radius: 0px;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
