--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,8 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="{{ platform.description }}" />
-        <meta name="keywords" content="{{ platform.keywords }}" />
+        <meta name="description" content="{% block description %}{{ platform.description }}{% endblock %}" />
+        <meta name="keywords" content="{% block keywords %}{{ platform.keywords }}{% endblock %}" />
+        {% block meta_tags %}{% endblock %}
         <!-- Twitter Bootstrap Stylesheet -->
         <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
         <!-- Font Awesome Stylesheet -->
