--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,7 @@
         <script src="{{ asset('js/jquery.form.min.js') }}"></script>
         <!-- jQuery Form Validate -->
         <script src="{{ asset('js/jquery.validate.min.js') }}"></script>
-        {% if app.request.locale != 'en' %}<script src="{{ asset('js/locales/messages_' ~ app.request.locale ~ '.min.js') }}" />{% endif %}
+        {% if app.request.locale != 'en' %}<script src="{{ asset('js/locales/messages_' ~ app.request.locale ~ '.min.js') }}"></script>{% endif %}
         <!-- Twitter Bootstrap Fileupload -->
         <script src="{{ asset('js/bootstrap-filestyle.min.js') }}"></script>
         <!-- Twitter Bootstrap Alerts, Confirmation and Dialogs -->
